0.1.14 (#2)
* initial security setup

* version 0.1.14

* security

* security tests

* security tests

* refactor

* separate token facade

* token facade properties

* in memory security properties

* fixed @Data

* cleanup

* cleanup

* cleanup

* cleanup

* cleanup

* cleanup